# omerion-build

./: .dockerignore  .gitignore  .gitlab-ci.yml  .graphifyignore  .mcp.json  .railwayignore  BackboneEngine.gs  CLAUDE.md  DEPLOYMENT.md  railway.toml  requirements.txt  setup.sql  update_office.py
omerion/: .gitignore  VERIFICATION.md  check_logs.py  conftest.py  main.py  pyproject.toml  requirements.txt  run_migration.py
omerion/agents/: MIGRATION_PATTERN.md  __init__.py
omerion/agents/auditor/: __init__.py  graph.py  prompts.py  state.py  tools.py
omerion/agents/biz_dev_outreach/: __init__.py  contracts.py  graph.py  prompts.py  state.py  tools.py
omerion/agents/build_orchestrator/: __init__.py  contracts.py  graph.py  prompts.py  state.py  tools.py
omerion/agents/builder/: __init__.py  graph.py  prompts.py  state.py  tools.py
omerion/agents/client_intake/: graph.py  state.py
omerion/agents/client_onboarding/: __init__.py  (+5 more)
omerion/assets/: agency-sop.md
omerion/config/: agents.yaml
omerion/hermes/: ARIES_PLAYWRIGHT_MCP_PROMPT.txt  ARIES_SLIDES_MCP_PROMPT.txt  PHASE1_FUNCTIONAL_TESTS.txt  README.md  WEB_CAPABILITY_TIERS.md
omerion/omerion_core/: __init__.py  activity_logger.py  exceptions.py  fit_score.py  ingestion.py  logging.py  optout.py  sequence.py  settings.py  task_engine.py  validation.py
omerion/pipeline/: __init__.py  bulk_sync.py  chunker.py  embedder.py  extractor.py  index.py  main.py  upserter.py  watcher.py
omerion/scripts/: bulk_ingest_drive.py  competitive_intel_cron.py  ingest_local_repos.py  pulse_check.py  r4_regression_alert.py  replace_client_success.sql  run_auditor.py
omerion/skills/: auditor.skill.md  biz-dev-outreach.skill.md  build-orchestrator.skill.md  builder.skill.md  client-onboarding.skill.md  client-success.skill.md  competitive-intel.skill.md  compliance-checker.skill.md  crm-nurture.skill.md  deployer.skill.md  healer.skill.md  high-quality-lead-scraping.skill.md  icp-scoring.skill.md  lead-scoring.skill.md  lead-scraper-enricher.skill.md  linkedin-outreach.skill.md  market-mapper.skill.md  meeting-intelligence.skill.md  newsletter_generator.skill.md  offer-matching.skill.md  outcome-attribution.skill.md  proposal-drafting.skill.md  qa-tester.skill.md  r1-market-tech-watcher.skill.md  r2-oss-scout.skill.md  r3-strategic-architect.skill.md  r4-evaluation-telemetry.skill.md  security-auditor.skill.md  trainer.skill.md  validator.skill.md
(+470 files in other folders)
